# autopcr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  _clan_iterator.py  _clan_unlocker.py  _db_test.py  _download_web.py  _draw_user_info_trend.py  _httpserver_test.py  _record_info_stats.py  _task.py  _util.py  clan_iterator.py  clan_unlocker.py  config.yml  config_template.json  docker-compose.yml  download_web.py  draw_table.py  httpserver.py  httpserver_test.py  main.py  pixi.toml  pyproject.toml  querycsf.py  requirements.txt  server.py  start.bat  task.py  template.html  test.py  tmp.txt  util.py
.github/workflows/: build_docker_image.yml  main.yml  release.yml  sync-upstream.yml
autopcr/: bsgamesdk.py  clientbase.py  common.py  constants.py  constants.yml  modelbase.py  modulebase.py  modules.py  pcrclient.py  requests.py  responses.py  safeservice.py  serializer.py  validator.py
autopcr/bsdk/: bsdkclient.py  bsgamesdk.py  rsacr.py  validator.py
autopcr/core/: __init__.py  apiclient.py  base.py  clientpool.py  database.py  datamgr.py  misc.py  pcrclient.py  ratelimiter.py  region.py  sdkclient.py  sessionmgr.py
autopcr/db/: assetmgr.py  constdata.py  database.py  dbmgr.py  dbstart.py  methods.py  models.py  twasset.py
autopcr/http_server/: emailmgr.py  httpserver.py  httpserver_test.py  tokenmgr.py  validator.py
autopcr/model/: _convert.py  common.py  custom.py  enums.py  error.py  handlers.py  handles.py  modelbase.py  models.py  requests.py  responses.py  responses_.py  sdkrequests.py
autopcr/module/: accountmgr.py  clientpool.py  config.py  crons.py  modulebase.py  modulelistmgr.py  modulemgr.py  modules.py  validator.py
autopcr/sdk/: bsgamesdk.py  sdkclients.py  twplayerprefs.py  validator.py
autopcr/util/: aiorequests.py  arena.py  draw.py  draw_table.py  excel_export.py  freqlimiter.py  (+12 more)
data/: extraDrops.json  nickname.json  rainbow.json  rainbow_tw.json
templates/: config.html
test/: clan_iterator.py
tests/: test_assetmgr_unitypy.py  test_clientpool_reuse.py  test_database_cache_generation.py  test_tw_alces_request.py  test_tw_battlepass.py  test_tw_modulemgr.py  test_tw_official_db.py  test_tw_support.py  test_tw_support_room_like.py
(+56 files in other folders)
