[project]
authors = []
name = "autopcr"
requires-python = ">=3.10,<3.11"
version = "0.1.0"
dependencies = [
    "aiohttp>=3.12.14,<4",
    "msgpack>=1.1.1,<2",
    "pycryptodome>=3.23.0,<4",
    "requests>=2.32.4,<3",
    "quart>=0.19.0,<0.20",
    "pydantic>=1.10.1,<2",
    "jinja2>=3.1.6,<4",
    "markupsafe>=2.1.5,<3",
    "unitypy>=1.23.0,<2",
    "sqlalchemy>=2.0.41,<3",
    "pillow>=9.5.0,<10",
    "brotli>=1.1.0,<2",
    "quart-rate-limiter>=0.9.0,<0.10",
    "quart-auth>=0.9.1,<0.10",
    "quart-compress>=0.2.1,<0.3",
    "dataclasses-json>=0.6.7,<0.7",
    "pulp>=2.8.0,<3",
    "bili-ticket-gt-python>=0.3.2,<0.4"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.tasks]
download_web = { cmd = "python3 _download_web.py" }
server = { cmd = "python3 _httpserver_test.py" }

[tool.pixi.dependencies]
python = "3.10.*"
pixi-pycharm = ">=0.0.8,<0.0.9"

[tool.pixi.host-dependencies]
pkg-config = ">=0.29.2,<0.30"
